--- a/backend/env.example
+++ b/backend/env.example
@@ -5,7 +5,10 @@ PORT=5000
 NODE_ENV=development
 
 # Database Configuration
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/taqyeem?retryWrites=true&w=majority
+# For local development
+MONGODB_URI=mongodb://localhost:27017/taqyeem
+# For production (MongoDB Atlas)
+# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/taqyeem?retryWrites=true&w=majority
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-here
