--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,7 +1,7 @@
 # Environment Variables for Taqyeem Frontend
 
 # API Configuration
-VITE_API_URL=http://localhost:5000/api/v1
+VITE_API_BASE_URL=http://localhost:5000/api/v1
 
 # App Configuration
 VITE_APP_NAME=Taqyeem
