fixing error of route in deployment

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -2,7 +2,7 @@
 # Copy these to your Vercel project settings
 
 # API Configuration
-VITE_API_BASE_URL=https://taqyeem-q63c.vercel.app/api
+VITE_API_BASE_URL=https://taqyeem-q63c.vercel.app/api/v1
 
 # App Environment
 VITE_APP_ENV=production
