--- a/backend/env.example
+++ b/backend/env.example
@@ -6,9 +6,9 @@ NODE_ENV=development
 
 # Database Configuration
 # For local development
-MONGODB_URI=mongodb://localhost:27017/taqyeem
-# For production (MongoDB Atlas)
-# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/taqyeem?retryWrites=true&w=majority
+# MONGODB_URI=mongodb://localhost:27017/taqyeem
+# For production (MongoDB Atlas) - Replace with your actual connection string
+MONGODB_URI=mongodb+srv://a7med-22:ahmed123@cluster0.wij54tl.mongodb.net/taqyeem?retryWrites=true&w=majority
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-here
