adding utils and setup for cloudinary

--- a/backend/.env
+++ b/backend/.env
@@ -8,26 +8,28 @@ NODE_ENV=development
 # Database Configuration
 # For local development
 # MONGODB_URI=mongodb://localhost:27017/taqyeem
+
 # For production (MongoDB Atlas) - Replace with your actual connection string
 MONGODB_URI=mongodb+srv://a7med-22:ahmed123@cluster0.wij54tl.mongodb.net/taqyeem?retryWrites=true&w=majority
 
 # JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-here
+JWT_SECRET=ahmed123
 JWT_EXPIRE=7d
 
 # Token Configuration (for advanced token generation - currently not in use)
-ACCESS_TOKEN_USER=user-access-token-secret
-ACCESS_TOKEN_ADMIN=admin-access-token-secret
-REFRESH_TOKEN_USER=user-refresh-token-secret
-REFRESH_TOKEN_ADMIN=admin-refresh-token-secret
-
+ACCESS_TOKEN_USER="US_AH123"
+ACCESS_TOKEN_ADMIN="AD_AH123"
+REFRESH_TOKEN_USER="US_AH123_REF"
+REFRESH_TOKEN_ADMIN="AD_AH123_REF"
+BEARER_USER="bearer"
+BEARER_ADMIN="admin"
 # Hash Configuration
 SALT_ROUNDS=12
 
 # Cloudinary Configuration
-CLOUDINARY_CLOUD_NAME=your-cloudinary-cloud-name
-CLOUDINARY_API_KEY=your-cloudinary-api-key
-CLOUDINARY_API_SECRET=your-cloudinary-api-secret
+CLOUDINARY_CLOUD_NAME="dwcu9sw3t"
+CLOUDINARY_API_KEY="379126767535544"
+CLOUDINARY_API_SECRET="rIBkjO5vEWAknPDtVG3IKtyy6zg"
 CLOUDINARY_FOLDER=taqyeem
 
 # CORS Configuration
