--- a/backend/package.json
+++ b/backend/package.json
@@ -11,23 +11,24 @@
         "test": "jest"
     },
     "dependencies": {
-        "express": "^4.18.2",
-        "mongoose": "^8.0.3",
         "bcryptjs": "^2.4.3",
-        "jsonwebtoken": "^9.0.2",
-        "multer": "^1.4.5-lts.1",
-        "multer-storage-cloudinary": "^4.0.0",
         "cloudinary": "^1.41.0",
         "cors": "^2.8.5",
+        "crypto-js": "^4.2.0",
         "dotenv": "^16.3.1",
+        "express": "^4.18.2",
         "express-rate-limit": "^7.1.5",
-        "helmet": "^7.1.0",
         "express-validator": "^7.0.1",
-        "moment": "^2.29.4"
+        "helmet": "^7.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "moment": "^2.29.4",
+        "mongoose": "^8.0.3",
+        "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0"
     },
     "devDependencies": {
-        "nodemon": "^3.0.2",
-        "jest": "^29.7.0"
+        "jest": "^29.7.0",
+        "nodemon": "^3.0.2"
     },
     "keywords": [
         "interview",
