--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
         "express-rate-limit": "^7.1.5",
         "express-validator": "^7.0.1",
         "helmet": "^7.1.0",
+        "joi": "^18.0.2",
         "jsonwebtoken": "^9.0.2",
         "moment": "^2.29.4",
         "mongoose": "^8.0.3",
