make it proper for deployment

--- a/backend/env.example
+++ b/backend/env.example
@@ -31,6 +31,8 @@ CLOUDINARY_API_SECRET=your-cloudinary-api-secret
 CLOUDINARY_FOLDER=taqyeem
 
 # CORS Configuration
+# For production: Use your Vercel frontend URL
+# For multiple origins: Separate with commas (e.g., "https://app.example.com,https://www.example.com")
 FRONTEND_URL=http://localhost:5173
 
 # Rate Limiting
