--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,6 +1,8 @@
 # Environment Variables for Taqyeem Frontend
 
 # API Configuration
+# For production: Use your Vercel backend URL (e.g., https://taqyeem-backend.vercel.app/api/v1)
+# For development: Use local backend URL
 VITE_API_BASE_URL=http://localhost:5000/api/v1
 
 # App Configuration
