video call implmentation and evaluation

--- a/backend/env.example
+++ b/backend/env.example
@@ -38,3 +38,11 @@ FRONTEND_URL=http://localhost:5173
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+
+# WebRTC Configuration
+# Note: WebRTC uses native browser APIs with Socket.io for signaling
+# No external service credentials needed for basic functionality
+# For production, consider adding TURN server configuration if needed:
+# TURN_SERVER_URL=turn:your-turn-server.com
+# TURN_SERVER_USERNAME=your-username
+# TURN_SERVER_CREDENTIAL=your-credential
