--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
-    "workbench.colorCustomizations": {
-        "terminal.background": "#00000000",
-        "activityBar.background": "#600609",
-        "titleBar.activeBackground": "#87080C",
-        "titleBar.activeForeground": "#FFFBFC"
-    }
+  "workbench.colorCustomizations": {
+    "terminal.background": "#00000000",
+    "activityBar.background": "#600609",
+    "titleBar.activeBackground": "#87080C",
+    "titleBar.activeForeground": "#FFFBFC"
+  },
+  "cSpell.words": ["Taqyeem"]
 }
