--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
         "moment": "^2.29.4",
         "mongoose": "^8.0.3",
         "multer": "^1.4.5-lts.1",
-        "multer-storage-cloudinary": "^4.0.0"
+        "multer-storage-cloudinary": "^4.0.0",
+        "socket.io": "^4.8.1"
     },
     "devDependencies": {
         "jest": "^29.7.0",
