--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,40 +12,41 @@
     "preview:production": "vite preview --mode production"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@tailwindcss/vite": "^4.1.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^4.1.16",
-    "react-router-dom": "^6.20.1",
     "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-query-devtools": "^5.8.4",
     "axios": "^1.6.2",
-    "react-hook-form": "^7.48.2",
-    "@hookform/resolvers": "^3.3.2",
-    "zod": "^3.22.4",
-    "framer-motion": "^10.16.5",
-    "lucide-react": "^0.294.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
-    "react-i18next": "^13.5.0",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.5",
     "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.2.0",
+    "lucide-react": "^0.294.0",
+    "react": "^18.2.0",
+    "react-datepicker": "^4.25.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
-    "date-fns": "^2.30.0",
-    "react-datepicker": "^4.25.0"
+    "react-i18next": "^13.5.0",
+    "react-router-dom": "^6.20.1",
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^4.1.16",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^5.0.4",
+    "autoprefixer": "^10.4.16",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
-    "vite": "^7.1.7",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "postcss": "^8.4.32",
+    "vite": "^7.1.7"
   }
 }
