--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -61,7 +61,7 @@ jspm_packages/
 .yarn-integrity
 
 # dotenv environment variable files
-# .env - UNCOMMENTED TO ALLOW TRACKING (NOT RECOMMENDED FOR PRODUCTION)
+.env
 .env.development.local
 .env.test.local
 .env.production.local
