making notfound page 404

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
     "titleBar.activeBackground": "#87080C",
     "titleBar.activeForeground": "#FFFBFC"
   },
-  "cSpell.words": ["Taqyeem"]
+  "cSpell.words": ["Taqyeem", "العربية", "تقييم"]
 }
