--- a/backend/package.json
+++ b/backend/package.json
@@ -26,9 +26,7 @@
         "mongoose": "^8.0.3",
         "multer": "^1.4.5-lts.1",
         "multer-storage-cloudinary": "^4.0.0",
-        "socket.io": "^4.8.1",
-        "swagger-jsdoc": "^6.2.8",
-        "swagger-ui-express": "^5.0.1"
+        "socket.io": "^4.8.1"
     },
     "devDependencies": {
         "jest": "^29.7.0",
