--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -61,7 +61,7 @@ jspm_packages/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
+# .env is now allowed to be committed
 .env.development.local
 .env.test.local
 .env.production.local
